--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <title>ENTRAINEMENT PIXIIIIIIIII</title>
+    <link rel="stylesheet" href="style.css" media="screen" title="no title">
     <meta charset="utf-8">
-    <script src="pixi.min.js"></script>
+    <script src="vendors/pixi.min.js"></script>
+    <script src="main.js"></script>
   </head>
 
   <body>
-
-  <canvas id="c"></canvas>
 
   </body>
 
