--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <title>ENTRAINEMENT PIXIIIIIIIII</title>
-    <link rel="stylesheet" href="style.css" media="screen" title="no title">
+    <link rel="stylesheet" href="styles/style.css" media="screen" title="no title">
     <meta charset="utf-8">
     <script src="vendors/pixi.min.js"></script>
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
   </head>
   <body>
   </body>
