--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/style.css" media="screen" title="no title">
     <meta charset="utf-8">
     <script src="vendors/pixi.min.js"></script>
+    <script src="vendors/TweenLite.min.js"></script>
     <script src="scripts/main.js"></script>
   </head>
   <body>
