--- a/ardoise.html
+++ b/ardoise.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="styles/style.css" media="screen" title="no title">
     <meta charset="utf-8">
     <script src="vendors/pixi.min.js"></script>
-    <script src="scripts/main_testCanvas.js"></script>
+    <script src="vendors/TweenLite.min.js"></script>
+    <script src="scripts/ardoise.js"></script>
   </head>
   <body>
   </body>
