Add datas structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <script src="vendors/pixi.min.js"></script>
     <script src="vendors/TweenLite.min.js"></script>
+    <script src="scripts/datas.js"></script>
     <script src="scripts/main.js"></script>
   </head>
   <body>
