Add fixed timeline

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <script src="scripts/main.js"></script>
   </head>
   <body>
+    <div id="timeline">
+      <img src="assets/timeline.jpg" alt="">
+    </div>
   </body>
 </html>
