eyes game finished prototype

--- a/oeil.html
+++ b/oeil.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles/style.css" media="screen" title="no title">
     <meta charset="utf-8">
     <script src="vendors/pixi.min.js"></script>
+    <script src="vendors/TweenLite.min.js"></script>
+    <script src="scripts/datas.js"></script>
     <script src="scripts/oeil.js"></script>
 <!--     <script src="scripts/paper/dist/paper-full.min.js"></script>	-->    
   </head>
